--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -18,7 +18,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-
   flex-direction: row;
   flex-wrap: wrap;
 }
@@ -48,8 +47,7 @@
   align-items: center;
 }
 
-.header nav a {
-  /*background:var(--otro--tres);*/
+.header nav span {
   color: #fff;
   font-size: 1.2rem;
   text-align: center;
@@ -60,6 +58,6 @@
   flex-grow: 1;
 }
 
-.header nav a:hover {
+.header nav span:hover {
   background: var(--otro--uno);
 }
