--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -39,12 +39,13 @@
 }
 
 .header nav {
-  width: 50%;
+  width: 70%;
   /* Flexbox */
 
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  justify-content: center;
 }
 
 .header nav span {
